# mq_trading_demo_playground

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  websocket.py
backend/app/api/routes/: account.py  market_data.py  price_levels.py  screener.py  strategy.py  trading.py
backend/app/config/: loader.py  settings.py  watcher.py
backend/app/data/: database.py  models.py  redis_client.py
backend/app/events/: bus.py  events.py
backend/app/mt5/: client.py  models.py
backend/app/risk/: kill_switch.py  manager.py
backend/app/services/: account_service.py  market_data_service.py  screener_service.py  trading_service.py
backend/app/strategy/: engine.py  level_trade.py  price_levels.py  rule_engine.py  signals.py
config/: notifications.yaml  price_levels.yaml  risk.yaml  screener.yaml  strategy.yaml  symbols.yaml  trade_plans.yaml
database/: init.sql
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: AccountSummary.svelte  Chart.svelte  OrderPanel.svelte  PositionTable.svelte  PriceLevelOverlay.svelte  RiskMetrics.svelte  RuleRow.svelte  ScreenerFilters.svelte  ScreenerTable.svelte  ScreenerWidget.svelte  StrategyConfig.svelte  TradeHistory.svelte  TradePlanEditor.svelte  TradePlanList.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
mt5/: pip-constraints.txt  start-rpyc.sh
(+15 files in other folders)
